--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 				<div class="siteLogin fr">
 					<ul>
 						<li class="dropdown">
-							<a href="javascript:void(0)">Login</a>
+							<a href="javascript:void(0)" class="loginpanel">Login</a>
 
 							<!-- log In end  -->
 						</li>
-						<li><a href="#">Signup</a></li>
+						<li><a href="#" class="loginpanel">Signup</a></li>
 					</ul>
 				</div>
 			</div>
@@ -161,7 +161,11 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 <script type="text/javascript">
-
+$(document).ready(function(){
+	$(".loginpanel").on("click",function(){
+		$(".dropdownMenu").animate({top: "110px"});
+	});
+});
 
 </script>
 
