--- a/index.html
+++ b/index.html
@@ -1,174 +1,149 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>DUD</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900,900i" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-
-</head>
-<body>
-
-
-<div class="registerWrap dropdownMenu  clearfix" >
-	<div class="signIn registerContainer clearfix">
-		<h5 class="headH5">log in with</h5>
-		<div class="socialLogin fl">
-			<div class="btnBlock">
-				<input type="button" name="facebook" class="fbLogin loginbtn" value="Facebook">
-				<input type="button" name="twitter" class="twitLogin loginbtn" value="Twitter">
-				<input type="button" name="gPlus" class="gPlusLogin loginbtn" value="Google">
-			</div>
+	<head>
+		<title>DUD</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900,900i" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
+	</head>
+	<body>
 		
-			<p class="txtCopy mg15">New to DUD?  <a href="#" class="openLink ">Sign Up</a></p>
-		</div>
-		<div class="dividerBlock fl">
-			<div class="divider"></div>
-			<span class="txt">Or</span>
-		</div>
-		<div class="emailLogin fr">
-			<form>
-				<input type="txt" name="email" placeholder="Email" class="inputy">
-				<input type="password" name="password" placeholder="Password" class="inputy">
-				<div class="clearfix mg15">
-					<input type="button" value="SIGN IN" class="btnSign fl">
-					<a href="#" class="openLink fr">Forgot the password?</a>
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-
-
-<div class="wrapper clearfix">
-
-	<div class="headWrap clearfix">
-
-		<div class="container clearfix">
-			<div class="header clearfix">
-				<div class="logo fl"><a href="#"><img src="images/logo.png"></a></div>
-				<div class="nav fl">
-					<ul>
-						<li><a href="#">About us</a></a></li>
-						<li><a href="#">Tour</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Sponsorship</a></li>
-					</ul>
-				</div>
-
-				<div class="siteLogin fr">
-					<ul>
-						<li class="dropdown">
-							<a href="javascript:void(0)" class="loginpanel">Login</a>
-
-							<!-- log In end  -->
-						</li>
-						<li><a href="#" class="loginpanel">Signup</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<!-- container end -->
-
-	</div>	
-	<!-- headWrap end -->
-
-	<div class="homeBaner">
-
-	</div>
-	<!-- homeBaner end -->
-
-	<div class="joinDud txt-center">
-		<h1 class="headH1"><span>join</span> Dance Usa Dance 2</h1>
-		<div><a href="#" class="jNow">Join Now</a></div>
-	</div>
-	<!-- joinDud end -->
-
-	<div class="footerWrap clearfix">
-		<div class="containerMd clearfix">
-
-			<div class="footerLogo fl">
-				<a href="#"><img src="images/footlogo.png"></a>
-			</div>
-
-			<div class="social fl">
-				<h6 class="headH6">follow Us</h6>
-				<a href="#" class="fb socialIcon"></a>
-				<a href="#" class="insta socialIcon"></a>
-				<a href="#" class="twit socialIcon"></a>
-				<a href="#" class="yt socialIcon"></a>
-			</div>
-
-			<div class="instaUpdates fr">
-				<h6 class="headH6">instagram</h6>
-				<div class="inUpdate fl"></div>
-				<div class="inUpdate fl"></div>
-				<div class="inUpdate fl"></div>
-			</div>
-
-		</div>	
-		<!-- container end -->
-	</div>
-	<!-- footerWrap end -->
-
-
-	<div class="btmFooter txt-center clearfix">
-		<div class="containerMd containerMd">
-			<a href="#">Terms & Conditions </a>
-			<a href="#">Waiver</a>
-			<a href="#">Privacy Policy</a>
-			<a href="#">&copy; 5678MediaGroup  </a>
-			<a href="#">Developed & Maintained by Infinity Design</a>
-		</div>	
-	</div>
-	<!-- btmFooter end -->
-
-	<div class="registerWrap clearfix">
-		<div class="signUp registerContainer clearfix">
-			<h5 class="headH5">join today with</h5>
-			<div class="socialLogin fl">
-				<div class="btnBlock">
-					<input type="button" name="facebook" class="fbLogin loginbtn" value="Facebook">
-					<input type="button" name="twitter" class="twitLogin loginbtn" value="Twitter">
-					<input type="button" name="gPlus" class="gPlusLogin loginbtn" value="Google">
-				</div>
-				<p class="txtCopy">We will send verfication mail to user email id, once user approved the verfication he should get post login access.</p>
-				<p class="txtCopy mgTop">Already a member?  <a href="#" class="openLink ">Login</a></p>
-			</div>
-			<div class="dividerBlock fl">
-				<div class="divider"></div>
-				<span class="txt">Or</span>
-			</div>
-			<div class="emailLogin fr">
-				<form>
-					<input type="txt" name="name" placeholder="Full Name" class="inputy">
-					<input type="txt" name="email" placeholder="Email" class="inputy">
-					<input type="password" name="password" placeholder="Password" class="inputy">
-					<div class="txtCopy mgtb">
-						<input type="checkbox" name="checkbox" class="check">	I have accepted the DUD <a href="#" class="openLink ">Terms & conditions</a> 
+		<div class="wrapper clearfix">
+			<div class="headWrap clearfix">
+				<div class="container clearfix navigation">
+					<div class="header clearfix">
+						<div class="logo fl"><a href="#"><img src="images/logo.png"></a></div>
+						<div class="nav fl">
+							<ul>
+								<li><a href="#">About us</a></a></li>
+								<li><a href="#">Tour</a></li>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Sponsorship</a></li>
+							</ul>
+						</div>
+						<div class="siteLogin fr">
+							<ul>
+								<li class="dropdown">
+									<a href="javascript:void(0)" class="loginpanel">Login</a>
+									<!-- log In end  -->
+								</li>
+								<li><a href="#" class="loginpanel">Signup</a></li>
+							</ul>
+						</div>
 					</div>
-					<input type="button" value="SIGN UP" class="btnSign ">
-				</form>
+				</div>
+				
+				<!-- container end -->
 			</div>
+
+			<div class="registerWrap dropdownMenu  clearfix" >
+					<div class="signIn registerContainer clearfix">
+						<h5 class="headH5">log in with</h5>
+						<div class="socialLogin fl">
+							<div class="btnBlock">
+								<input type="button" name="facebook" class="fbLogin loginbtn" value="Facebook">
+								<input type="button" name="twitter" class="twitLogin loginbtn" value="Twitter">
+								<input type="button" name="gPlus" class="gPlusLogin loginbtn" value="Google">
+							</div>
+							
+							<p class="txtCopy mg15">New to DUD?  <a href="#" class="openLink ">Sign Up</a></p>
+						</div>
+						<div class="dividerBlock fl">
+							<div class="divider"></div>
+							<span class="txt">Or</span>
+						</div>
+						<div class="emailLogin fr">
+							<form>
+								<input type="txt" name="email" placeholder="Email" class="inputy">
+								<input type="password" name="password" placeholder="Password" class="inputy">
+								<div class="clearfix mg15">
+									<input type="button" value="SIGN IN" class="btnSign fl">
+									<a href="#" class="openLink fr">Forgot the password?</a>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			
+			<!-- headWrap end -->
+			<div class="homeBaner">
+			</div>
+			<!-- homeBaner end -->
+			<div class="joinDud txt-center">
+				<h1 class="headH1"><span>join</span> Dance Usa Dance 2</h1>
+				<div><a href="#" class="jNow">Join Now</a></div>
+			</div>
+			<!-- joinDud end -->
+			<div class="footerWrap clearfix">
+				<div class="containerMd clearfix">
+					<div class="footerLogo fl">
+						<a href="#"><img src="images/footlogo.png"></a>
+					</div>
+					<div class="social fl">
+						<h6 class="headH6">follow Us</h6>
+						<a href="#" class="fb socialIcon"></a>
+						<a href="#" class="insta socialIcon"></a>
+						<a href="#" class="twit socialIcon"></a>
+						<a href="#" class="yt socialIcon"></a>
+					</div>
+					<div class="instaUpdates fr">
+						<h6 class="headH6">instagram</h6>
+						<div class="inUpdate fl"></div>
+						<div class="inUpdate fl"></div>
+						<div class="inUpdate fl"></div>
+					</div>
+				</div>
+				<!-- container end -->
+			</div>
+			<!-- footerWrap end -->
+			<div class="btmFooter txt-center clearfix">
+				<div class="containerMd containerMd">
+					<a href="#">Terms & Conditions </a>
+					<a href="#">Waiver</a>
+					<a href="#">Privacy Policy</a>
+					<a href="#">&copy; 5678MediaGroup  </a>
+					<a href="#">Developed & Maintained by Infinity Design</a>
+				</div>
+			</div>
+			<!-- btmFooter end -->
+			<div class="registerWrap clearfix">
+				<div class="signUp registerContainer clearfix">
+					<h5 class="headH5">join today with</h5>
+					<div class="socialLogin fl">
+						<div class="btnBlock">
+							<input type="button" name="facebook" class="fbLogin loginbtn" value="Facebook">
+							<input type="button" name="twitter" class="twitLogin loginbtn" value="Twitter">
+							<input type="button" name="gPlus" class="gPlusLogin loginbtn" value="Google">
+						</div>
+						<p class="txtCopy">We will send verfication mail to user email id, once user approved the verfication he should get post login access.</p>
+						<p class="txtCopy mgTop">Already a member?  <a href="#" class="openLink ">Login</a></p>
+					</div>
+					<div class="dividerBlock fl">
+						<div class="divider"></div>
+						<span class="txt">Or</span>
+					</div>
+					<div class="emailLogin fr">
+						<form>
+							<input type="txt" name="name" placeholder="Full Name" class="inputy">
+							<input type="txt" name="email" placeholder="Email" class="inputy">
+							<input type="password" name="password" placeholder="Password" class="inputy">
+							<div class="txtCopy mgtb">
+								<input type="checkbox" name="checkbox" class="check">	I have accepted the DUD <a href="#" class="openLink ">Terms & conditions</a>
+							</div>
+							<input type="button" value="SIGN UP" class="btnSign ">
+						</form>
+					</div>
+				</div>
+			</div>
+			<!-- sign up end  -->
 		</div>
-	</div>
-	<!-- sign up end  -->
-
-
-
-</div>
-
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function(){
-	$(".loginpanel").on("click",function(){
-		$(".dropdownMenu").animate({top: "110px"});
-	});
-});
-
-</script>
-
-
-</body>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript">
+		$(document).ready(function(){
+			$(".loginpanel").on("click",function(){
+				$(".dropdownMenu").show().animate({top: "110px"});
+			});
+		});
+		</script>
+	</body>
 </html>
