--- a/article.html
+++ b/article.html
@@ -75,7 +75,7 @@
 					
 					<section class="row">
 						<div class="col-12 articlepanel">
-							<article>
+							<article>sss
 								<div class="col-8 pad-0 leftpanel">
 								<figure>
 									<img src="images/articlepic.jpg" alt="" />
