--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>ss
+	<head>
 		<title>DUD</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900,900i" rel="stylesheet">
