--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<div class="logo fl"><a href="#"><img src="images/logo.png"></a></div>
 						<div class="nav fl">
 							<ul>
-								<li><a href="#">About</a></a></li>
+								<li><a href="#">About Us</a></a></li>
 								<li><a href="#">Tour</a></li>
 								<li><a href="#">Blog</a></li>
 								<li><a href="#">Sponsorship</a></li>
