--- a/article.html
+++ b/article.html
@@ -74,16 +74,31 @@
 					</ul>
 					
 					<section class="row">
-						<div class="col-12 articlepanel">
-							<article>sss
+						<div class="col-12 pad-0 articlepanel">
+							<article>
 								<div class="col-8 pad-0 leftpanel">
-								<figure>
-									<img src="images/articlepic.jpg" alt="" />
-								</figure>
+									<figure>
+										<img src="images/articlepic.jpg" alt="" />
+									</figure>
+									<div class="articlepage">
+										<h1 class="heading-h1">Lorem ipsum dolor sit amet, consectetur</h1>
+										<p class="date">JULY 31, 2017</p>
+										<p class="articlecopy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta tortor vel velit volutpat tincidunt. Etiam vehicula odio ut elit aliquet, sit amet blandit libero tincidunt. Nulla ac egestas libero, ac mattis lacus. Suspendisse sodales sapien a sapien eleifend, nec fringilla ex maximus. Donec elit turpis, lobortis a tortor mollis, porta fringilla lectus. Phasellus scelerisque purus ante, at commodo ante fermentum id. In massa lorem, sagittis non ex quis, ornare dictum odio. Ut vel imperdiet dui. Integer euismod volutpat ante, eget vestibulum elit finibus ac. Nunc elit ipsum, dignissim a dolor nec, finibus rutrum nisi. Duis lacinia quis odio nec egestas. Pellentesque diam lacus, interdum sit amet semper et, interdum at odio. Quisque non tellus a tortor mollis rutrum in quis arcu. Quisque a est libero.</p>
+										<div class="articlevideo">
+											<iframe id="player" type="text/html" width="100%" height="475"
+											src="https://www.youtube.com/embed/juFWl3vqsTQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+										</div>
+										<p class="articlecopy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta tortor vel velit volutpat tincidunt. Etiam vehicula odio ut elit aliquet, sit amet blandit libero tincidunt. Nulla ac egestas libero, ac mattis lacus. Suspendisse sodales sapien a sapien eleifend, nec fringilla ex maximus. Donec elit turpis, lobortis a tortor mollis, porta fringilla lectus. Phasellus scelerisque purus ante, at commodo ante fermentum id. In massa lorem, sagittis non ex quis, ornare dictum odio. Ut vel imperdiet dui. Integer euismod volutpat ante, eget vestibulum elit finibus ac. Nunc elit ipsum, dignissim a dolor nec, finibus rutrum nisi. Duis lacinia quis odio nec egestas. Pellentesque diam lacus, interdum sit amet semper et, interdum at odio. Quisque non tellus a tortor mollis rutrum in quis arcu. Quisque a est libero.</p>
+									</div>
+									<div class="articleall">
+										<p class="arelatehead">RELATED</p>
+										<hr class="blackhr"/>
+
+										<div class="row"></div>
+									</div>
+
 								</div>
-
 								<div class="col-4 rightpanel fr"></div>
-
 							</article>
 						</div>
 					</section>
