--- a/article.html
+++ b/article.html
@@ -154,7 +154,7 @@
 														</figure>
 														<figcaption>
 														<h5 class="heading_h5">Lorem ipsum dolor sit amet</h5>
-														<h6 class="heading_h6">JULY 21, 2017</h6>
+														<h6 class="heading_h6 datetxt">JULY 21, 2017</h6>
 														
 														</figcaption>
 													</li>
@@ -164,7 +164,7 @@
 														</figure>
 														<figcaption>
 														<h5 class="heading_h5">Lorem ipsum dolor sit amet</h5>
-														<h6 class="heading_h6">JULY 21, 2017</h6>
+														<h6 class="heading_h6 datetxt">JULY 21, 2017</h6>
 														
 														</figcaption>
 													</li>
