--- a/about_us.html
+++ b/about_us.html
@@ -68,9 +68,9 @@
 					</div>	
 				</div>	
 
-				<div class="ourTeam clearfix">
+				<div class="ourTeam txt-center clearfix">
 					<div class="container">
-						<h2 class="headH2 txt-center"><span>OUR</span> TEAM</h2>
+						<h2 class="headH2 "><span>OUR</span> TEAM</h2>
 						<ul class="teamMember">
 							<li>
 								<img src="images/team.jpg">
