--- a/tour.html
+++ b/tour.html
@@ -8,7 +8,7 @@
 		<link href="css/ALightBox.css" rel="stylesheet">
 		<link href="css/jquery.bxslider.css" rel="stylesheet">
 	</head>
-	<body>		
+	<body>
 		<div class="wrapper clearfix">
 			<div class="headWrap clearfix">
 				<div class="container clearfix navigation">
@@ -72,10 +72,10 @@
 			
 			<!-- headWrap end -->
 			<div class="homeBaner tourpanel">
-				 <h1 class="heading_h1">2018 TOUR MAP</h1>
-				 <div class="container tourmap">
-				 	
-				 </div>
+				<h1 class="heading_h1">2018 TOUR MAP</h1>
+				<div class="container tourmap">
+					
+				</div>
 			</div>
 			<!-- homeBaner end -->
 			<div class="joinDud txt-center">
@@ -83,7 +83,6 @@
 				<div><a href="#" class="jNow">Join Now</a></div>
 			</div>
 			<!-- joinDud end -->
-
 			<!--team video-->
 			<section class="videoWrap txt-center clearfix">
 				<h2 class="headH2 txt-center">TEAM <span>VIDEOS</span></h2>
@@ -108,7 +107,6 @@
 				</div>
 			</section>
 			<!--end team video-->
-
 			<!--featured video-->
 			<section class="videoWrap txt-center clearfix">
 				<h2 class="headH2 txt-center">FEATURED <span>VIDEOS</span></h2>
@@ -134,6 +132,14 @@
 			</section>
 			<!--end featured video-->
 
+			<!--ad common banner-->
+			<div class="season2 paddTopBtm txt-uppercase txt-center clearfix">
+				<h1 class="headH1 txt-uppercase">THE CONTEST</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien. Nulla ante libero, tincidunt sed metus at, sodales imperdiet lacus. Praesent mattis magna aAliquam et lorem sed sem egestas laoreet. Phasellus eget scelerisque augue.</p>
+				<a href="#" class="btnPrimary mgTop50 pad-25">SEE FAQ</a>
+			</div>
+			<!--end ad common banner-->
+			
 			<div class="footerWrap clearfix">
 				<div class="containerMd clearfix">
 					<div class="footerLogo fl">
@@ -155,7 +161,6 @@
 				</div>
 				<!-- container end -->
 			</div>
-
 			<!-- footerWrap end -->
 			<div class="btmFooter txt-center clearfix">
 				<div class="containerMd containerMd">
@@ -173,11 +178,9 @@
 		<script src="js/ALightBox.js"></script>
 		<script src="js/jquery.bxslider.min.js"></script>
 		<script src="js/custom.js"></script>
-
 		<script type="text/javascript">
-
-		$(document).ready(function(){		
-			$('.bxslider').bxSlider();			
+				$(document).ready(function(){
+						$('.bxslider').bxSlider();
 		});
 		</script>
 		
