--- a/about_us.html
+++ b/about_us.html
@@ -92,6 +92,10 @@
 								<img src="images/team.jpg">
 								<div class="designation">CEO</div>
 							</li>
+							<li>
+								<img src="images/team.jpg">
+								<div class="designation">CEO</div>
+							</li>
 						</ul>
 					</div>	
 				</div>
