--- a/tour.html
+++ b/tour.html
@@ -108,7 +108,7 @@
 			</section>
 			<!--end team video-->
 			<!--featured video-->
-			<section class="videoWrap txt-center clearfix">
+			<section class="videoWrap pad-t-0 txt-center clearfix">
 				<h2 class="headH2 txt-center">FEATURED <span>VIDEOS</span></h2>
 				<div class="videoCnt" >
 					
@@ -133,12 +133,42 @@
 			<!--end featured video-->
 
 			<!--ad common banner-->
-			<div class="season2 paddTopBtm txt-uppercase txt-center clearfix">
-				<h1 class="headH1 txt-uppercase">THE CONTEST</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien. Nulla ante libero, tincidunt sed metus at, sodales imperdiet lacus. Praesent mattis magna aAliquam et lorem sed sem egestas laoreet. Phasellus eget scelerisque augue.</p>
-				<a href="#" class="btnPrimary mgTop50 pad-25">SEE FAQ</a>
+			<div class="contest paddTopBtm txt-center clearfix">
+			<div class="container">
+				<h1 class="headH2 mgBtm50 txt-uppercase whitecolor">THE CONTEST</h1>
+				<p class="txtcopy whitecolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien. Nulla ante libero, tincidunt sed metus at, sodales imperdiet lacus. Praesent mattis magna aAliquam et lorem sed sem egestas laoreet. Phasellus eget scelerisque augue.</p>
+				<a href="#" class="btnPrimary mgTop50 pad-55">SEE FAQ</a>
+			</div>
 			</div>
 			<!--end ad common banner-->
+
+			<div class="judgespanel clearfix">
+			<div class="container">
+				<h1 class="headH2 mgBtm50 txt-center whitecolor">THE JUDGES</h1>
+				<div class="row">
+					<ul class="judgecol">
+						<li>
+							<div class="colj">								
+								<div class="judgname">
+									<span>P. DIDDY</span>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="colj"><div class="judgname">
+									<span>LILLY SINGH</span>
+								</div></div>
+						</li>
+						<li>
+							<div class="colj"><div class="judgname">
+									<span>MADHURI DIXIT</span>
+								</div></div>
+						</li>
+					</ul>
+
+				</div>
+			</div>
+			</div>
 			
 			<div class="footerWrap clearfix">
 				<div class="containerMd clearfix">
