--- a/tour.html
+++ b/tour.html
@@ -79,8 +79,8 @@
 			</div>
 			<!-- homeBaner end -->
 			<div class="joinDud txt-center">
-				<h1 class="headH1"><span>join</span> Dance Usa Dance 2</h1>
-				<div><a href="#" class="jNow">Join Now</a></div>
+				<h1 class="headH1"><span>join</span> Dance Usa Dance <span>2</span></h1>
+				<div><a href="javascript:void(0);" class="jNow">Join Now</a></div>
 			</div>
 			<!-- joinDud end -->
 			<!--team video-->
