--- a/about_us.html
+++ b/about_us.html
@@ -116,13 +116,13 @@
 
 				</div>
 
-				<div class="dudNumbers paddTopBtm clearfix">
+				<div class="dudNumbers commonTemp1 paddTopBtm clearfix">
 					<div class="container">
 						<h2 class="headH2 txt-center"><span>BY THE </span> NUMBERS</h2>
-						<ul class="dudNumList mgTop50 txt-center">
+						<ul class="dudNumList boxList mgTop50 txt-center">
 							<li>
-								<div class="numBoxWrap bg1 txt-center">
-									<div class="numWrap">
+								<div class="boxWrap bg1 txt-center">
+									<div class="boxInner">
 										<h2 class="headH2">5000 +</h2>
 										<p>Attendees</p>
 									</div>
@@ -131,8 +131,8 @@
 								<p class="txtcopy txt-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien.</p>
 							</li>
 							<li>
-								<div class="numBoxWrap bg2 txt-center">
-									<div class="numWrap">
+								<div class="boxWrap bg2 txt-center">
+									<div class="boxInner">
 										<h2 class="headH2">5000 +</h2>
 										<p>Attendees</p>
 									</div>
@@ -141,8 +141,8 @@
 								<p class="txtcopy txt-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien.</p>
 							</li>
 							<li>
-								<div class="numBoxWrap bg3 txt-center">
-									<div class="numWrap">
+								<div class="boxWrap bg3 txt-center">
+									<div class="boxInner">
 										<h2 class="headH2">5000 +</h2>
 										<p>Attendees</p>
 									</div>
@@ -151,22 +151,22 @@
 								<p class="txtcopy txt-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien.</p>
 							</li>
 							<li>
-								<div class="numBoxWrap bg1 txt-center">
-									<div class="numWrap">
+								<div class="boxWrap bg1 txt-center">
+									<div class="boxInner">
 										<h2 class="headH2">5000 +</h2>
 										<p>Attendees</p>
 									</div>
-								</div>	
+								</div>		
 								<div class="titleTxt txt-left">TOTAL IMMERSION</div>
 								<p class="txtcopy txt-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien.</p>
 							</li>
 							<li>
-								<div class="numBoxWrap bg2 txt-center">
-									<div class="numWrap">
+								<div class="boxWrap bg2 txt-center">
+									<div class="boxInner">
 										<h2 class="headH2">5000 +</h2>
 										<p>Attendees</p>
 									</div>
-								</div>	
+								</div>		
 								<div class="titleTxt txt-left">TOTAL IMMERSION</div>
 								<p class="txtcopy txt-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisl tincidunt, facilisis tortor quis, efficitur tortor. Vestibulum ut tincidunt mauris. Suspendisse potenti. Suspendisse ac tempus sapien.</p>
 							</li>																					
