--- a/about_us.html
+++ b/about_us.html
@@ -53,8 +53,8 @@
 			<!-- abtVideoWrap end -->
 
 
-			<section class=" abtWrap mgTop100 clearfix">
-				<div class="visionWrap clearfix">
+			<section class=" abtWrap  mgTop100 clearfix">
+				<div class="commonTemp2 visionWrap  clearfix">
 					<h2 class="headH2 txt-center">5678's <span>MISSION & VISION</span></h2>
 					<div class="container">
 						<div class="colhalf fl">
@@ -100,7 +100,7 @@
 					</div>	
 				</div>
 
-				<div class="sponserUs paddTopBtm  mgTop100 clearfix">
+				<div class="sponserUs commonTemp2 paddTopBtm  mgTop100 clearfix">
 					<h2 class="headH2 mgBtm50 txt-center">SPONSOR US</span></h2>
 
 					<div class="container">
