--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			<div class="headWrap clearfix">
 				<div class="container clearfix navigation">
 					<div class="header clearfix">
-						<div class="logo fl"><a href="#"><img src="images/logo.png"></a></div>
+						<div class="logo fl"><a href="index.html"><img src="images/logo.png"></a></div>
 						<div class="nav fl">
 							<ul>
-								<li><a href="#">About Us</a></a></li>
-								<li><a href="#">Tour</a></li>
-								<li><a href="#">Blog</a></li>
-								<li><a href="#">Sponsorship</a></li>
+								<li><a href="about_us.html">About Us</a></a></li>
+								<li><a href="tour.html">Tour</a></li>
+								<li><a href="blog.html">Blog</a></li>
+								<li><a href="sponsership.html">Sponsorship</a></li>
 							</ul>
 						</div>
 						<div class="siteLogin fr">
